deployment-infra/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - name: wordpress
          image: wordpress:php8.3-apache
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthcheck.php
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
            - name: healthcheck-volume
              mountPath: /var/www/html/healthcheck.php
              subPath: healthcheck.php
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-pvc
        - name: healthcheck-volume
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1"
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: wordpress-pv
#   namespace: wordpress
#   labels:
#     app: wordpress
# spec:
#   capacity:
#     storage: 10Gi
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: ebs-storage
#   csi:
#     driver: ebs.csi.aws.com
#     volumeHandle: ${WORDPRESS_VOLUME_ID}
#     fsType: ext4
---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: mysql-pv
#   namespace: wordpress
#   labels:
#     app: wordpress
# spec:
#   capacity:
#     storage: 10Gi
#   volumeMode: Filesystem
#   accessModes:
#     - ReadWriteOnce
#   persistentVolumeReclaimPolicy: Retain
#   storageClassName: ebs-storage
#   csi:
#     driver: ebs.csi.aws.com
#     volumeHandle: ${MYSQL_VOLUME_ID}
#     fsType: ext4
